; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_queue_hci_read_bd_addr.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_queue_hci_read_bd_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btpad_queue_command = type { i32 }

@hci_read_bd_addr_ptr = common dso_local global i32 0, align 4
@insert_position = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btpad_queue_command*)* @btpad_queue_hci_read_bd_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btpad_queue_hci_read_bd_addr(%struct.btpad_queue_command* %0) #0 {
  %2 = alloca %struct.btpad_queue_command*, align 8
  store %struct.btpad_queue_command* %0, %struct.btpad_queue_command** %2, align 8
  %3 = load %struct.btpad_queue_command*, %struct.btpad_queue_command** %2, align 8
  %4 = icmp ne %struct.btpad_queue_command* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %12

6:                                                ; preds = %1
  %7 = load i32, i32* @hci_read_bd_addr_ptr, align 4
  %8 = load %struct.btpad_queue_command*, %struct.btpad_queue_command** %2, align 8
  %9 = getelementptr inbounds %struct.btpad_queue_command, %struct.btpad_queue_command* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = call i32 @btpad_increment_position(i32* @insert_position)
  %11 = call i32 (...) @btpad_queue_process()
  br label %12

12:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @btpad_increment_position(i32*) #1

declare dso_local i32 @btpad_queue_process(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
